<resources>
    <string name="app_name">Recipe Maker</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="recipe_category">Recipe Category</string>
    <string name="recipe_ingredients">Recipe Ingredients</string>
    <string name="recipe_instructions">Recipe Instructions</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_add">Add</string>
    <string name="confirm_cancel">Cancel</string>
    <string name="confirm_delete">Are you sure you want to delete this recipe?</string>
    <string name="confirm_title">Delete Confirmation</string>
    <string name="recipe_hint">Recipe Name</string>
    <string name="recipe_search_hint">Search recipes by name</string>
    <string name="recipe_save">Save</string>
    <string name="recipe_search">Search</string>
    <string name="recipe_error">Please enter a recipe name</string>
    <string name="recipe_not_found">No recipes found, please try again</string>
    <string name="base_url">https://api.edamam.com/search?q=PLACEHOLDER&amp;from=0&amp;to=3&amp;ingr=5&amp;app_id=f96b970c&amp;app_key=33ad6c428a9e470e6bfdf8899432acf4&amp;from=0&amp;to=3&amp;calories=591-722&amp;health=alcohol-free</string>
    &amp;from=1&amp;to=3&amp;ingr=5&amp;

    <string-array name="category_items">
        <item>Recipe Category</item>
        <item>Appetizer</item>
        <item>Entree</item>
        <item>Dessert</item>
        <item>Salad</item>
        <item>Side Dish</item>
        <item>Other</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
