<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/searchContainer"
    tools:context=".fragments.SearchFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/searchTV"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:text="@string/recipe_search_hint"
            android:textColor="@android:color/black"
            android:textSize="30sp" />


        <EditText
            android:id="@+id/searchEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="100dp"
            android:ems="10"
            android:hint="@string/recipe_hint"
            android:inputType="textPersonName"
            android:imeOptions="actionNone"/>

        <Button
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="100dp"
            android:text="@string/recipe_search" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recipe_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="175dp"
            android:layout_marginEnd="20dp"
            android:adjustViewBounds="true"
            android:background="@color/backgroundColor"
            android:scaleType="fitXY"
            android:scrollbars="vertical" />

    </RelativeLayout>
</FrameLayout>