<FrameLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
   android:layout_height="match_parent">

   <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">

         <android.support.design.widget.TextInputLayout
             android:id="@+id/nameTextInputLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="5dp">

            <EditText
                android:id="@+id/recipeNameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/recipe_name"
                android:imeOptions="actionNext"
                android:inputType="textCapWords|textPersonName"
                android:padding="5dp" />
         </android.support.design.widget.TextInputLayout>

         <android.support.design.widget.TextInputLayout
             android:id="@+id/recipeCategory"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="5dp">
            <Spinner
                android:id="@+id/recipeCategorySpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:padding="5dp"
                style="@style/Base.Widget.AppCompat.Spinner.Underlined" />
         </android.support.design.widget.TextInputLayout>

         <android.support.design.widget.TextInputLayout
             android:id="@+id/emailTextInputLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="5dp">

            <EditText
                android:id="@+id/recipeIngredientsET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/recipe_ingredients"
                android:imeOptions="actionNext"
                android:inputType="textMultiLine"
                android:padding="5dp" />
         </android.support.design.widget.TextInputLayout>

         <android.support.design.widget.TextInputLayout
             android:id="@+id/recipeInstructionsLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="5dp">

            <EditText
                android:id="@+id/recipeInstructionsET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/recipe_instructions"
                android:imeOptions="actionNext"
                android:inputType="textMultiLine"
                android:padding="5dp" />
         </android.support.design.widget.TextInputLayout>
      </LinearLayout>
   </ScrollView>

   <android.support.design.widget.FloatingActionButton
      android:id="@+id/saveFloatingActionButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="top|end"
      android:layout_margin="@dimen/fab_margin"
      android:src="@drawable/ic_save_24dp"/>

</FrameLayout>
